; ModuleID = '/home/carl/AnghaBench/git/extr_pack-bitmap.c_bitmap_position_extended.c'
source_filename = "/home/carl/AnghaBench/git/extr_pack-bitmap.c_bitmap_position_extended.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bitmap_index = type { %struct.TYPE_4__*, %struct.TYPE_3__ }
%struct.TYPE_4__ = type { i32 }
%struct.TYPE_3__ = type { i32* }
%struct.object_id = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.bitmap_index*, %struct.object_id*)* @bitmap_position_extended to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bitmap_position_extended(%struct.bitmap_index* %0, %struct.object_id* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.bitmap_index*, align 8
  %5 = alloca %struct.object_id*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  store %struct.bitmap_index* %0, %struct.bitmap_index** %4, align 8
  store %struct.object_id* %1, %struct.object_id** %5, align 8
  %9 = load %struct.bitmap_index*, %struct.bitmap_index** %4, align 8
  %10 = getelementptr inbounds %struct.bitmap_index, %struct.bitmap_index* %9, i32 0, i32 1
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load i32*, i32** %11, align 8
  store i32* %12, i32** %6, align 8
  %13 = load i32*, i32** %6, align 8
  %14 = load %struct.object_id*, %struct.object_id** %5, align 8
  %15 = getelementptr inbounds %struct.object_id, %struct.object_id* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i64 @kh_get_oid_pos(i32* %13, i32 %16)
  store i64 %17, i64* %7, align 8
  %18 = load i64, i64* %7, align 8
  %19 = load i32*, i32** %6, align 8
  %20 = call i64 @kh_end(i32* %19)
  %21 = icmp slt i64 %18, %20
  br i1 %21, label %22, label %33

22:                                               ; preds = %2
  %23 = load i32*, i32** %6, align 8
  %24 = load i64, i64* %7, align 8
  %25 = call i32 @kh_value(i32* %23, i64 %24)
  store i32 %25, i32* %8, align 4
  %26 = load i32, i32* %8, align 4
  %27 = load %struct.bitmap_index*, %struct.bitmap_index** %4, align 8
  %28 = getelementptr inbounds %struct.bitmap_index, %struct.bitmap_index* %27, i32 0, i32 0
  %29 = load %struct.TYPE_4__*, %struct.TYPE_4__** %28, align 8
  %30 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = add nsw i32 %26, %31
  store i32 %32, i32* %3, align 4
  br label %34

33:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %34

34:                                               ; preds = %33, %22
  %35 = load i32, i32* %3, align 4
  ret i32 %35
}

declare dso_local i64 @kh_get_oid_pos(i32*, i32) #1

declare dso_local i64 @kh_end(i32*) #1

declare dso_local i32 @kh_value(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
